# webdown

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  debug_hf.py  debug_hf2.py  docker-compose.yml  docker-entrypoint.sh  feeds.json  pyproject.toml  requirements.txt  run_api.py  run_mcp.py  run_streamlit.py  start_mcp.bat
.pi/extensions/: webdown.ts
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  MCP.md
specs/2026-06-16_web-search/: 01-story.md  02-scenarios.md  03-domain.md  04-implementation.md  05-architecture.md  README.md
tests/: conftest.py  test_api_characterization.py  test_application_use_cases.py  test_domain_resilience.py  test_html_to_markdown_converter.py  test_infrastructure_repositories.py  test_page_error_repository.py  test_retrying_page_renderer.py  test_sitemap_fidelity.py
tests/test_application/: _fakes.py  test_bulk_conversion_resilience.py  test_markdown_file_export.py  test_search_web.py
webdown/: main.py
webdown/core/: __init__.py
webdown/core/domain/: exceptions.py
webdown/infrastructure/database/: sqlite_schema_initializer.py
webdown/infrastructure/repositories/: sqlite_connection_factory.py  sqlite_markdown_file_repository.py  sqlite_markdown_job_repository.py  sqlite_page_error_repository.py
webdown/infrastructure/services/: _element_processors.py  _markdown_detection.py  _text_extraction.py  beautifulsoup_html_to_markdown_converter.py  ddgs_web_search_service.py  feedparser_rss_feed_aggregator.py  file_system_crash_artifact_writer.py  file_system_markdown_file_writer.py  gitingest_github_repository_processor.py  playwright_page_renderer.py  requests_site_metadata_service.py  requests_sitemap_discovery_service.py  retrying_page_renderer.py
webdown/presentation/mcp/: server.py
webdown/presentation/streamlit/: app.py
webdown/startup/: api.py  app_factory.py  mcp.py  repository_factory.py  service_factory.py  use_case_factory.py
(+98 files in other folders)
