[project]
name = "webdown"
version = "1.0.0"
description = "A suite of APIs for website documentation processing - sitemap exploration, HTML to Markdown conversion, and content management"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["web-scraping", "markdown", "sitemap", "documentation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastapi>=0.121.3",
    "feedparser>=6.0.12",
    "hatchling>=1.27.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.0.0",
    "pandas-stubs==2.3.2.250926",
    "playwright>=1.56.0",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "unstructured>=0.18.20",
    "uvicorn[standard]>=0.38.0",
    "feedparser>=6.0.12",
    "gitingest>=0.3.1",
    "playwright>=1.56.0",
    "openapi-python-client==0.27.1",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "openapi-python-client==0.27.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/webdown"
Documentation = "https://github.com/yourusername/webdown/blob/master/README.md"
Repository = "https://github.com/yourusername/webdown"
Issues = "https://github.com/yourusername/webdown/issues"

[project.scripts]
webdown = "webdown.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
